// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Note RAG Eval > chunk-basic: 两个 H2 章节：顶层 H1 整节成 parent，不同 section 的段落各成 child 1`] = `
{
  "children": [
    {
      "chunkIndex": 0,
      "content": "先装 Node 18，再执行 npm install。",
      "contentHash": "a1d70bbc29d27e56c2cd6e4dce2f13791458060ed5f2c5f37243d93a5ddfd857",
      "parentIndex": 0,
      "sectionPath": [
        "部署指南",
        "安装",
      ],
      "title": "安装",
    },
    {
      "chunkIndex": 1,
      "content": "修改 config.yaml 设置端口。

数据库连接用 MongoDB。",
      "contentHash": "30e44682b0c7e332a794a092ef34a2f3d19aab55bcf49b23b598ae7cbc079956",
      "parentIndex": 0,
      "sectionPath": [
        "部署指南",
        "配置",
      ],
      "title": "配置",
    },
  ],
  "parents": [
    {
      "chunkIndex": 0,
      "content": "# 部署指南

## 安装

先装 Node 18，再执行 npm install。

## 配置

修改 config.yaml 设置端口。

数据库连接用 MongoDB。",
      "contentHash": "ef1ba376ad712967c8d78d04c3ece6bf50ea0ff7325e917700b66d1578ae0575",
      "sectionPath": [
        "部署指南",
      ],
      "title": "部署指南",
    },
  ],
  "stats": {
    "avgChildTokens": 12,
    "childCount": 2,
    "forcedSplitCount": 0,
    "maxChildTokens": 12,
    "minChildTokens": 11,
    "parentCount": 1,
  },
}
`;

exports[`Note RAG Eval > chunk-multibyte: CJK + emoji + 韩文 + 泰语：同 section 短段落合并为单 child，多字节字符不被切断 1`] = `
{
  "children": [
    {
      "chunkIndex": 0,
      "content": "这是一段中文内容，包含 emoji 🚀 与韩文 안녕 与泰语 สวัสดี。

第二段纯中文，验证切分不破坏字符。",
      "contentHash": "14b2efef838864392bf23c962e06198b40a827e2164322280211e29ba5f7bbf5",
      "parentIndex": 0,
      "sectionPath": [
        "多字节测试",
      ],
      "title": "多字节测试",
    },
  ],
  "parents": [
    {
      "chunkIndex": 0,
      "content": "# 多字节测试

这是一段中文内容，包含 emoji 🚀 与韩文 안녕 与泰语 สวัสดี。

第二段纯中文，验证切分不破坏字符。",
      "contentHash": "bcafe083281fae68ea5a7816963406e7e3e850d24281256786554d5970282578",
      "sectionPath": [
        "多字节测试",
      ],
      "title": "多字节测试",
    },
  ],
  "stats": {
    "avgChildTokens": 56,
    "childCount": 1,
    "forcedSplitCount": 0,
    "maxChildTokens": 56,
    "minChildTokens": 56,
    "parentCount": 1,
  },
}
`;

exports[`Note RAG Eval > reindex-delete: 删除一个章节 → 父块替换、保留段 reParent、删除段 childrenDeleted=1、不 re-embed 1`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 2,
  "childrenReParented": 0,
  "embeddingTokens": 8,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 0,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-delete: 删除一个章节 → 父块替换、保留段 reParent、删除段 childrenDeleted=1、不 re-embed 2`] = `
{
  "childrenDeleted": 1,
  "childrenInserted": 0,
  "childrenReParented": 1,
  "embeddingTokens": 0,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 1,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-full-to-diff: 首次全量（parentsInserted=1, childrenInserted=2）；二次改第二段→父块替换、第一段 reParent（不 re-embed）、第二段 re-embed 1`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 2,
  "childrenReParented": 0,
  "embeddingTokens": 27,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 0,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-full-to-diff: 首次全量（parentsInserted=1, childrenInserted=2）；二次改第二段→父块替换、第一段 reParent（不 re-embed）、第二段 re-embed 2`] = `
{
  "childrenDeleted": 1,
  "childrenInserted": 1,
  "childrenReParented": 1,
  "embeddingTokens": 23,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 1,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-invalid-id: 非法 noteId → 前置校验短路，skipReason INVALID_ID 1`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 0,
  "childrenReParented": 0,
  "embeddingTokens": 0,
  "noteId": "not-a-valid-objectid",
  "parentsDeleted": 0,
  "parentsInserted": 0,
  "skipReason": "INVALID_ID",
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-missing: 笔记不存在（findOne=null）→ skipReason NOTE_NOT_FOUND，不触 DB 1`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 0,
  "childrenReParented": 0,
  "embeddingTokens": 0,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 0,
  "parentsInserted": 0,
  "skipReason": "NOTE_NOT_FOUND",
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-reparent: 改章节标题（子块 content 不变）→ 父块替换、子块 reParent（仅更新引用，不 re-embed）→ embeddingTokensGt=false 1`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 2,
  "childrenReParented": 0,
  "embeddingTokens": 14,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 0,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > reindex-reparent: 改章节标题（子块 content 不变）→ 父块替换、子块 reParent（仅更新引用，不 re-embed）→ embeddingTokensGt=false 2`] = `
{
  "childrenDeleted": 0,
  "childrenInserted": 0,
  "childrenReParented": 2,
  "embeddingTokens": 0,
  "noteId": "66f2c4f2a1b2c3d4e5f6a7b8",
  "parentsDeleted": 1,
  "parentsInserted": 1,
  "unchanged": 0,
}
`;

exports[`Note RAG Eval > search-notebook-filter: 跨笔记本 seed（nb1/nb2 混合）→ 传 notebookId=nb1 只返回该笔记本结果 1`] = `
[
  {
    "chunkIndex": 0,
    "content": "如何部署服务以及启动命令",
    "noteId": "6a8eadce1a1bd4286ad0baa3",
    "notebookId": "6a8eadce1a1bd4286ad0baa8",
    "parentContext": "# 部署

如何部署服务以及启动命令与配置说明",
    "score": 0.03333333333333333,
    "sectionPath": [
      "部署",
    ],
    "title": "部署",
  },
]
`;

exports[`Note RAG Eval > search-parent-backfill: 命中 child → 回填 parent 全文进 parentContext，且仅限 notebookId 过滤范围内的父块 1`] = `
[
  {
    "chunkIndex": 0,
    "content": "如何部署服务以及启动命令",
    "noteId": "6a8eadce1a1bd4286ad0baa3",
    "notebookId": "6a8eadce1a1bd4286ad0baa8",
    "parentContext": "# 部署

如何部署服务以及启动命令与配置说明",
    "score": 0.03333333333333333,
    "sectionPath": [
      "部署",
    ],
    "title": "部署",
  },
]
`;
